--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@
   .btn {
     font-weight: 600;
     transition: all 300ms ease;
-    padding: 1rem;
+    padding: 0.8rem;
     width: 8rem;
     border-radius: 2rem;
   }
@@ -322,59 +322,105 @@
   
   .experience-details-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    flex-direction:column;
+    gap: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    flex-direction: row;
     
   }
   
   .article-container {
-    display: flex;
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
     text-align: initial;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 2.5rem;
-    justify-content: space-around;
+    gap: 2rem;
+    justify-content:center;
   }
   
   article {
     display: flex;
-    width: 10rem;
-    justify-content: space-around;
-    gap: 0.5rem;
+    gap: 0.8rem;
   }
   
-  article .icon {
+  .article .icon {
     cursor: default;
   }
   
   /* PROJECTS SECTION */
   
+
+  .project-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
+    gap: 2.4rem;
+    margin-top: 2rem;
+  }
+  .project-details-container {
+    padding: 0.8rem;
+    background: white;
+    border-radius: 1.6rem;
+    text-align: center;
+  }
+  .project-content {
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content:center;
+  }
+
   #projects {
     position: relative;
   }
   
   .color-container {
-    border-color: rgb(163, 163, 163);
+    border: rgb(163, 163, 163) 0.1rem solid;
     background: rgb(250, 250, 250);
   }
   
   .project-img {
-    border-radius: 2rem;
-    width: 90%;
-    height: 90%;
+    border-radius: 0.8rem 0.8rem 0 0;
+    display: block;
+    transition: transform 0.5s;
+    width: 100%;
     
   }
   
   .project-title {
     font-size:large;
-    margin: .8rem;
+    margin: .6rem;
     color: black;
+  }
+  .skills span{
+  background-color: #bac2c4;
+  font-weight: 600;
+  padding: 0.3rem;
+  justify-content: center;
+  text-transform: uppercase;
+  font-size: 10px;
+  border-radius: 0.5rem;
   }
   
   .project-btn {
     color: black;
+    font-size: medium;
+    padding: 0.6rem;
+    margin: 1rem;
+    /* opacity: 0; */
     border-color: rgb(163, 163, 163);
   }
+  /* .project-details-container :hover .project-title {
+    transform: translateY(-5%);
+  }
+  .project-details-container :hover .skills {
+    transform: translateY(-5%);
+  }
+  .project-details-container :hover .project-btn{
+    transform: translateY(-5%);
+    opacity: 1;
+  } */
   
   /* CONTACT */
   
